vaultkeeps can be deleted

--- a/keeper.client/src/assets/scss/_variables.scss
+++ b/keeper.client/src/assets/scss/_variables.scss
@@ -1,6 +1,6 @@
 $themes: (
   default: (
-    "body-bg": #e5e5e5,
+    "body-bg": #e9d8d6,
     "primary": #3ba5dc,
     "secondary": #e9d8d6,
     "success": #00f867,
